--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
+<body class="debug">
     <header id="app_header">
-        <nav></nav>
-        <div class="banner"></div>
+        <nav>
+            <div class="nav-container cont-width">
+                <div class="logo dash-b p-1">logo</div>
+                <ul class="nav-list dash-b p-1">
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
+                <div class="login dash-b p-1">login</div>
+            </div>
+        </nav>
+        <div class="banner">
+            <div class="banner-content dash-b"></div>
+        </div>
     </header>
     <!-- /#app_header -->
     <main id="app_main">
-        <section></section>
+        <section>
+            <div class="section-content"></div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
