--- a/index.html
+++ b/index.html
@@ -27,13 +27,30 @@
         </div>
     </header>
     <!-- /#app_header -->
+
     <main id="app_main">
-        <section>
-            <div class="section-content"></div>
+        <section class="main-section">
+            <div class="section-content cont-width">
+                <div class="section-img dash-b"></div>
+                <div class="section-text dash-b"></div>
+            </div>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="main-section bg-gr">
+            <div class="section-content cont-width">
+                <div class="section-text dash-b"></div>
+                <div class="section-img dash-b"></div>
+            </div>
+        </section>
+        <section class="main-section">
+            <div class="section-content cont-width">
+                <div class="section-img dash-b"></div>
+                <div class="section-text dash-b"></div>
+            </div>
+        </section>
+        <section class="main-footer bg-gr">
+            <div id="main-footer"class="section-content cont-width dash-b">
+            </div>
+        </section>
     </main>
     <!-- /#app_main -->
     <footer id="app_footer">
