--- a/index.html
+++ b/index.html
@@ -54,8 +54,23 @@
     </main>
     <!-- /#app_main -->
     <footer id="app_footer">
-        <div id="footer-top"></div>
-        <div id="footer-bottom"></div>
+        <div class="footer-container cont-width">
+            <div id="footer-top">
+                <div class="social dash-b"></div>
+                <div class="columns">
+                    <div class="col dash-b-w"></div>
+                    <div class="col dash-b-w"></div>
+                    <div class="col dash-b-w"></div>
+                    <div class="col dash-b-w"></div>
+                </div>
+            </div>
+            <!--da rimuovere-->    
+            <hr>
+            <div id="footer-bottom">
+                <div id="footer-logo"class="footer-btn dash-b">Logo</div>
+                <div id="footer-btn" class="footer-btn dash-b">Button</div>
+            </div>
+        </div>
     </footer>
     <!-- /#app_footer -->
 </body>
