[remove] debug class

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="section-text dash-b"></div>
             </div>
         </section>
-        <section class="main-footer bg-gr">
+        <section class="main-bottom bg-gr">
             <div id="main-footer"class="section-content cont-width dash-b">
             </div>
         </section>
