[fix] html typo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Discord</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body class="debug">
+<body>
     <header id="app_header">
         <nav>
             <div class="nav-container cont-width">
@@ -48,7 +48,7 @@
             </div>
         </section>
         <section class="main-bottom bg-gr">
-            <div id="main-footer"class="section-content cont-width dash-b">
+            <div id="main-bottom" class="section-content cont-width dash-b">
             </div>
         </section>
     </main>
@@ -67,7 +67,7 @@
             <!--da rimuovere-->    
             <hr>
             <div id="footer-bottom">
-                <div id="footer-logo"class="footer-btn dash-b">Logo</div>
+                <div id="footer-logo" class="footer-btn dash-b">Logo</div>
                 <div id="footer-btn" class="footer-btn dash-b">Button</div>
             </div>
         </div>
