--- a/index.html
+++ b/index.html
@@ -9,53 +9,54 @@
 </head>
 <body>
     <header id="app_header">
-        <nav>
-            <div class="nav-container cont-width">
+        <div class="container cont-width">
                 <div class="logo dash-b p-1">logo</div>
-                <ul class="nav-list dash-b p-1">
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                    <li>link</li>
-                </ul>
+                <nav class="dash-b">
+                    <ul class="nav-list p-1">
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                        <li>link</li>
+                    </ul>
+                </nav>
                 <div class="login dash-b p-1">login</div>
-            </div>
-        </nav>
-        <div class="banner">
-            <div class="banner-content dash-b"></div>
         </div>
+        
     </header>
     <!-- /#app_header -->
 
     <main id="app_main">
+        <div class="banner">
+            <div class="banner-content dash-b"></div>
+        </div>
         <section class="main-section">
-            <div class="section-content cont-width">
+            <div class="container">
                 <div class="section-img dash-b"></div>
                 <div class="section-text dash-b"></div>
             </div>
         </section>
         <section class="main-section bg-gr">
-            <div class="section-content cont-width">
+            <div class="container">
                 <div class="section-text dash-b"></div>
                 <div class="section-img dash-b"></div>
             </div>
         </section>
         <section class="main-section">
-            <div class="section-content cont-width">
+            <div class="container">
                 <div class="section-img dash-b"></div>
                 <div class="section-text dash-b"></div>
             </div>
         </section>
         <section class="main-bottom bg-gr">
-            <div id="main-bottom" class="section-content cont-width dash-b">
+            <div class="container dash-b">
             </div>
         </section>
     </main>
     <!-- /#app_main -->
-    
+
     <footer id="app_footer">
-        <div class="footer-container cont-width">
+        <div class="container">
             <div id="footer-top">
                 <div class="social dash-b"></div>
                 <div class="columns">
