--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="app_header">
-        <div class="container cont-width">
+        <div class="container">
                 <div class="logo dash-b p-1">logo</div>
                 <nav class="dash-b">
                     <ul class="nav-list p-1">
@@ -27,28 +27,28 @@
     <!-- /#app_header -->
 
     <main id="app_main">
-        <div class="banner">
-            <div class="banner-content dash-b"></div>
+        <div class="jumbotron">
+            <div class="jumbotron-container dash-b"></div>
         </div>
-        <section class="main-section">
+        <section id="safe-talk" class="main-section">
             <div class="container">
                 <div class="section-img dash-b"></div>
                 <div class="section-text dash-b"></div>
             </div>
         </section>
-        <section class="main-section bg-gr">
+        <section id="easy-meeting" class="main-section bg-gr">
             <div class="container">
                 <div class="section-text dash-b"></div>
                 <div class="section-img dash-b"></div>
             </div>
         </section>
-        <section class="main-section">
+        <section id="fandom" class="main-section">
             <div class="container">
                 <div class="section-img dash-b"></div>
                 <div class="section-text dash-b"></div>
             </div>
         </section>
-        <section class="main-bottom bg-gr">
+        <section id="reliable">
             <div class="container dash-b">
             </div>
         </section>
@@ -58,7 +58,7 @@
     <footer id="app_footer">
         <div class="container">
             <div id="footer-top">
-                <div class="social dash-b"></div>
+                <div id="talk" class="dash-b"></div>
                 <div class="columns">
                     <div class="col dash-b-w"></div>
                     <div class="col dash-b-w"></div>
